
add_executable(Sort 0206/Sort.cpp)
add_executable(TwoSum 0206/TwoSum.cpp)
add_executable(FindNum 0206/FindNum.cpp)
add_executable(offer03 0206/offer03.cpp)

add_executable(offer04 0206/offer04.cpp)
add_executable(offer05 0206/offer05.cpp)
add_executable(offer06 0206/offer06.cpp)
add_executable(offer07 0206/offer07.cpp)
add_executable(Sort0207 0207/Sort0207.cpp)
add_executable(offer09 0207/offer09.cpp)
add_executable(offer10 0207/offer10.cpp)
add_executable(offer11 0207/offer11.cpp)
add_executable(offer15 0207/offer15.cpp)
add_executable(offer16 0207/offer16.cpp)
add_executable(offer18 0207/offer18.cpp)
add_executable(offer030207 0207/offer030207.cpp)