
add_executable(Sort 0206/Sort.cpp)
add_executable(TwoSum 0206/TwoSum.cpp)
add_executable(FindNum 0206/FindNum.cpp)
add_executable(offer03 0206/offer03.cpp)

add_executable(offer04 0206/offer04.cpp)
add_executable(offer05 0206/offer05.cpp)
add_executable(offer06 0206/offer06.cpp)
add_executable(offer07 0206/offer07.cpp)
add_executable(Sort0207 0207/Sort0207.cpp)
add_executable(offer09 0207/offer09.cpp)
add_executable(offer10 0207/offer10.cpp)
add_executable(offer11 0207/offer11.cpp)
add_executable(offer15 0207/offer15.cpp)
add_executable(offer16 0207/offer16.cpp)
add_executable(offer18 0207/offer18.cpp)
add_executable(offer030207 0207/offer030207.cpp)
add_executable(offer08 0208/offer08.cpp)
add_executable(offer110208 0208/offer110208.cpp)
add_executable(offer120208 0208/offer120208.cpp)
add_executable(offer130208 0208/offer130208.cpp)
add_executable(offer140209 0208/offer140209.cpp)
add_executable(offer210209 0209/offer210209.cpp)
add_executable(offer220209 0209/offer220209.cpp)
add_executable(offer230209 0209/offer230209.cpp)
add_executable(offer240209 0209/offer240209.cpp)
add_executable(offer250209 0209/offer250209.cpp)
add_executable(Sort0212 0212/Sort0212.cpp)
add_executable(offer310212 0212/offer310212.cpp)
add_executable(offer320212 0212/offer320212.cpp)
add_executable(offer340212 0212/offer340212.cpp)
add_executable(offer350212 0212/offer350212.cpp)
add_executable(offer380212 0212/offer380212.cpp)
add_executable(offer260210 0210/offer260210.cpp)
add_executable(offer270210 0210/offer270210.cpp)
add_executable(offer280210 0210/offer280210.cpp)
add_executable(offer290210 0210/offer290210.cpp)
add_executable(MinStack 0210/MinStack.cpp)
add_executable(offer300210 0210/offer300210.cpp)
add_executable(offer310210 0210/offer310210.cpp)


add_executable(offer400213 0213/offer400213.cpp)
add_executable(offer410213 0213/offer410213.cpp)
add_executable(offer420213 0213/offer420213.cpp)

add_executable(offer450213 0213/offer450213.cpp)


add_executable(offer470214 0214/offer470214.cpp)
add_executable(offer480214 0214/offer480214.cpp)
add_executable(offer490214 0214/offer490214.cpp)
add_executable(offer500214 0214/offer500214.cpp)
add_executable(offer510214 0214/offer510214.cpp)
add_executable(offer520214 0214/offer520214.cpp)
add_executable(offer530215 0215/offer530215.cpp)
add_executable(offer540215 0215/offer540215.cpp)
add_executable(offer550215 0215/offer550215.cpp)
add_executable(offer560215 0215/offer560215.cpp)
add_executable(offer570215 0215/offer570215.cpp)
add_executable(offer580218 0218/offer580218.cpp)
add_executable(offer590218 0218/offer590218.cpp)
add_executable(offer600218 0218/offer600218.cpp)
add_executable(offer610218 0218/offer610218.cpp)
add_executable(offer620218 0218/offer620218.cpp)
add_executable(offer630218 0218/offer630218.cpp)
add_executable(offer640218 0218/offer640218.cpp)
add_executable(offer650218 0218/offer650218.cpp)
add_executable(offer660218 0218/offer660218.cpp)
add_executable(offer680218 0218/offer680218.cpp)

add_executable(Sort0219 0219/Sort0219.cpp)
add_executable(OrderBt0219 0219/OrderBt0219.cpp)
add_executable(RobotPath 0219/RobotPath.cpp)
add_executable(CutRope0219 0219/CutRope0219.cpp)
add_executable(DeleteNode 0219/DeleteNode.cpp)
add_executable(duplicate0219 021901/duplicate0219.cpp)
add_executable(rotate021901 021901/rotate021901.cpp)
add_executable(rope021901 021901/rope021901.cpp)
add_executable(SingleNumInTripple 0216/SingleNumInTripple.cpp)
add_executable(MinTree0225 0225/MinTree0225.cpp)

add_executable(TreeOrder0206 0225/TreeOrder0206.cpp)
add_executable(Tree0226 021901/Tree0226.cpp)
add_executable(reversestr0228 0228/reversestr0228.cpp)